test/libyul/yulSyntaxTests/invalid/unicode_string_direction_override.sol
{
    // pop 1
    let s := unicode"underflow ‬";
}
// ----
// ParserError 1465: (35-47): Illegal token: Invalid character in string.
